--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+.sidebar {
+  grid-area: sidebar;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pages {
+  grid-area: mainpage;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Default styles for mobile devices */
+
+.layout {
+  display: grid;
+  grid-template-areas:
+    "mainpage mainpage mainpage"
+    "mainpage mainpage mainpage"
+    "sidebar sidebar sidebar ";
+}
+
+/* Styles for tablets (portrait) and up */
+@media (min-width: 768px) {
+  .layout {
+    display: grid;
+    grid-template-areas:
+      "mainpage mainpage mainpage"
+      "mainpage mainpage mainpage"
+      "sidebar sidebar sidebar ";
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+/* Styles for laptops and up */
+@media screen and (min-width: 1024px) {
+  .layout {
+    display: grid;
+    grid-template-areas:
+      "sidebar mainpage mainpage"
+      "sidebar mainpage mainpage"
+      "sidebar  mainpage mainpage";
   }
 }
