--- a/src/pages/dasboardPage/dashBoardPage.css
+++ b/src/pages/dasboardPage/dashBoardPage.css
@@ -6,6 +6,7 @@
 }
 
 .data-div {
+  cursor: pointer;
   height: max-content;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   width: max-content;
@@ -23,6 +24,7 @@
   }
 
   .data-div {
+    cursor: pointer;
     height: max-content;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     width: max-content;
@@ -41,6 +43,7 @@
   }
 
   .data-div {
+    cursor: pointer;
     height: max-content;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     width: max-content;
